# aitviewer

./: .gitignore  CITATION.cff  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yml  tests.yml
aitviewer/: aitvconfig.yaml  configuration.py  headless.py  renderer.py  server.py  shaders.py  viewer.py
aitviewer/models/: flame.py  mano.py  smpl.py  star.py  supr.py
aitviewer/remote/: message.py  node.py  viewer.py
aitviewer/renderables/: arrows.py  billboard.py  bounding_boxes.py  coordinate_system.py  flame.py  gaussian_splats.py  lines.py  mano.py  meshes.py  multi_view_system.py  plane.py  point_clouds.py  rigid_bodies.py  sdf.py  skeletons.py  smpl.py  spheres.py  star.py  supr.py  volume.py
aitviewer/scene/: camera.py  camera_utils.py  light.py  material.py  node.py  scene.py
aitviewer/shaders/: chessboard.glsl  clipping.glsl  cylinder.glsl  directional_lights.glsl  lines_instanced.vs.glsl  lines_instanced_positions.vs.glsl  lit_with_edges.glsl  mesh_positions.vs.glsl  point_clouds.glsl  screen_texture.glsl  (+4 more)
examples/: animation.py  camera_path.py  headless_rendering.py  load_3DPW.py  load_AMASS.py  load_BVH.py  load_DIP_IMU.py  load_DIP_TC.py  load_GLAMR.py  load_ROMP.py  load_STAR.py  load_SUPR.py  load_VIBE.py  load_local_smpl_npz.py  load_obj.py  load_point_clouds.py  load_template.py  local_smpl_viewer.py  missing_frames.py  quickstart.py  quickstart_flame.py  quickstart_mano.py  quickstart_smpl.py  remote.py  remote_amass.py  remote_custom_viewer.py  remote_two_way_communication.py  render_primitives.py  sdf_gpu_shader.py  sdf_skimage.py  stream.py  vertex_clicking.py
tests/: conftest.py  gen_references.py  test_local_smpl_viewer_script.py  test_misc.py  test_renderables.py  test_viewer_window_type.py  utils.py
(+36 files in other folders)
